--- a/neodash.html
+++ b/neodash.html
@@ -165,10 +165,10 @@
             </div>
         </div>
         <div class="block one">
-            <a href="https://account.neopets.com/classic/login" class="button"><i class="fa fa-right-to-bracket"></i> <b class="floatlink">Launch Neopass</b></a>
+            <a href="https://account.neopets.com/classic/login" class="button" target="_blank"><i class="fa fa-right-to-bracket"></i> <b class="floatlink">Launch Neopass</b></a>
         </div>
         <div class="block three topblock">
-            <a href="https://www.neopets.com/settings/profile/" class="button"><i class="fa fa-circle-user"></i><br>Account</a>
+            <a href="https://www.neopets.com/settings/profile/" class="button" target="_blank"><i class="fa fa-circle-user"></i><br>Account</a>
             <a href="https://www.neopets.com/home" class="button" target="_blank"><i class="fa fa-paw"></i><br>Pets</a>
             <a href="https://www.neopets.com/bank.phtml" class="button" target="_blank"><i class="fa fa-bank"></i><br>Bank</a>
             <a href="https://www.neopets.com/inventory.phtml" class="button" target="_blank"><i class="fa fa-clipboard"></i><br>Inv.</a>
@@ -180,39 +180,39 @@
         </div>
         <h2>Dailies</h2>
         <div class="block six dailies">
-            <a href="https://www.neopets.com/prehistoric/mediocrity.phtml" class="button"><img src="https://images.neopets.com/wheels/new/tm_mediocrity.jpg"  target="_blank"><br> Wheel of Mediocrity</a>
-            <a href="https://www.neopets.com/medieval/knowledge.phtml" class="button"><img src="https://images.neopets.com/items/toy_bv_wheelofknowledge.gif"  target="_blank"><br> Wheel of Knowledge</a>
-            <a href="https://www.neopets.com/faerieland/wheel.phtml" class="button"><img src="https://images.neopets.com/items/sta_stw_wheelofexcitement.gif"  target="_blank"><br> Wheel of Excitement</a>
-            <a href="https://www.neopets.com/halloween/applebobbing.phtml" class="button"><img src="https://images.neopets.com/items/toy_applebob_game.gif"  target="_blank"><br> Apple Bobbing</a>
-            <a href="https://www.neopets.com/worlds/geraptiku/tomb.phtml" class="button"><img src="https://images.neopets.com/items/toy_deserted_tomb.gif"  target="_blank"><br> Deserted Tomb</a>
-            <a href="https://www.neopets.com/winter/snowager.phtml" class="button"><img src="https://images.neopets.com/items/foo_negg_snowager.gif"  target="_blank"><br> Snowager</a>
-            <a href="https://www.neopets.com/trudys_surprise.phtml" class="button"><img src="https://images.neopets.com/items/toy_gtrudyslotmachine.gif"  target="_blank"><br> Trudy's</a>
-            <a href="https://www.neopets.com/halloween/gravedanger/index.phtml" class="button"><img src="https://images.neopets.com/items/sta_gd_grave_danger.gif"  target="_blank"><br> Grave Danger</a>
-            <a href="https://www.neopets.com/halloween/strtest/index.phtml" class="button"><img src="https://images.neopets.com/items/gar_testyourstrength.gif"  target="_blank"><br> Test Your Strength</a>
-            <a href="https://www.neopets.com/jelly/jelly.phtml" class="button"><img src="https://images.neopets.com/items/jel_lime_whole.gif"  target="_blank"><br> Giant Jelly</a>
-            <a href="https://www.neopets.com/prehistoric/omelette.phtml" class="button"><img src="https://images.neopets.com/items/toy_y19haltot_giantom_action.gif"  target="_blank"><br> Giant Omelette</a>
-            <a href="https://www.neopets.com/shop_of_offers.phtml?slorg_payout=yes" class="button"><img src="https://images.neopets.com/items/hall_petpet1.gif"  target="_blank"><br> Shop of Offers</a>
-            <a href="https://www.neopets.com/pirates/anchormanagement.phtml" class="button"><img src="https://images.neopets.com/items/fur_pirate_anchor.gif"  target="_blank"><br> Anchor Manag.</a>
-            <a href="https://www.neopets.com/pirates/forgottenshore.phtml" class="button"><img src="https://images.neopets.com/items/sta_forgotten_shore.gif"  target="_blank"><br> Forgotten Shore</a>
-            <a href="https://www.neopets.com/water/fishing.phtml" class="button"><img src="https://images.neopets.com/items/gar_fishing_meepit.gif"  target="_blank"><br> Fishing</a>
-            <a href="https://www.sunnyneo.com/dailies.php" class="button"><img src="https://images.neopets.com/items/book_bigpuzzles.gif"  target="_blank"><br> Daily Puzzle</a>
-            <a href="https://www.neopets.com/desert/shrine.phtml" class="button"><img src="https://images.neopets.com/items/stamp_desert_shrine.gif"  target="_blank"><br> Coltzan's Shrine</a>
-            <a href="https://www.neopets.com/faerieland/tdmbgpop.phtml" class="button"><img src="https://images.neopets.com/items/clo_y19haltot_bluegrundo_hh.gif"  target="_blank"><br> Discarded MBG Plush</a>
-            <a href="https://www.neopets.com/island/tombola.phtml" class="button"><img src="https://images.neopets.com/items/toy_squeezy_tombola.gif"  target="_blank"><br> Tombola</a>
-            <a href="https://www.neopets.com/desert/fruitmachine.phtml" class="button"><img src="https://images.neopets.com/items/sta_fruitmachine.gif"  target="_blank"><br> Fruit Machine</a>
-            <a href="https://www.neopets.com/games/giveaway/giveaway_game.phtml" class="button"><img src="https://images.neopets.com/items/bat_desert_scarab.gif"  target="_blank"><br> Qasalan Expellibox</a>
-            <a href="https://www.neopets.com/shenkuu/neggcave/" class="button"><img src="https://images.neopets.com/items/gif_negg_goldgem.gif"  target="_blank"><br> Negg Puzzle</a>
-            <a href="https://www.neopets.com/games/voidworks/" class="button"><img src="https://images.neopets.com/items/91gja6gf4f.gif"  target="_blank"><br> Voidworks</a>
-            <a href="https://www.neopets.com/games/cosycampfire/" class="button"><img src="https://images.neopets.com/items/gif_campfire.gif"  target="_blank"><br> Cosy Campfire</a>
-            <a href="https://www.neopets.com/lab.phtml" class="button"><img src="https://images.neopets.com/items/plu_madscientist_labray.gif"  target="_blank"><br> Secret Lab Ray</a>
-            <a href="https://www.neopets.com/petpetlab.phtml" class="button"><img src="https://images.neopets.com/items/plu_madscientist_kookith.gif"  target="_blank"><br> Petpet Lab Ray</a>
-            <a href="https://www.neopets.com/dome/" class="button"><img src="https://images.neopets.com/items/bd_bfm_battle_hammer.gif"  target="_blank"><br> Battldome</a>
+            <a href="https://www.neopets.com/prehistoric/mediocrity.phtml" class="button" target="_blank"><img src="https://images.neopets.com/wheels/new/tm_mediocrity.jpg"><br> Wheel of Mediocrity</a>
+            <a href="https://www.neopets.com/medieval/knowledge.phtml" class="button" target="_blank"><img src="https://images.neopets.com/items/toy_bv_wheelofknowledge.gif"><br> Wheel of Knowledge</a>
+            <a href="https://www.neopets.com/faerieland/wheel.phtml" class="button" target="_blank"><img src="https://images.neopets.com/items/sta_stw_wheelofexcitement.gif"><br> Wheel of Excitement</a>
+            <a href="https://www.neopets.com/halloween/applebobbing.phtml" class="button" target="_blank"><img src="https://images.neopets.com/items/toy_applebob_game.gif"><br> Apple Bobbing</a>
+            <a href="https://www.neopets.com/worlds/geraptiku/tomb.phtml" class="button" target="_blank"><img src="https://images.neopets.com/items/toy_deserted_tomb.gif"><br> Deserted Tomb</a>
+            <a href="https://www.neopets.com/winter/snowager.phtml" class="button" target="_blank"><img src="https://images.neopets.com/items/foo_negg_snowager.gif"><br> Snowager</a>
+            <a href="https://www.neopets.com/trudys_surprise.phtml" class="button" target="_blank"><img src="https://images.neopets.com/items/toy_gtrudyslotmachine.gif"><br> Trudy's</a>
+            <a href="https://www.neopets.com/halloween/gravedanger/index.phtml" class="button" target="_blank"><img src="https://images.neopets.com/items/sta_gd_grave_danger.gif"><br> Grave Danger</a>
+            <a href="https://www.neopets.com/halloween/strtest/index.phtml" class="button" target="_blank"><img src="https://images.neopets.com/items/gar_testyourstrength.gif"><br> Test Your Strength</a>
+            <a href="https://www.neopets.com/jelly/jelly.phtml" class="button" target="_blank"><img src="https://images.neopets.com/items/jel_lime_whole.gif"><br> Giant Jelly</a>
+            <a href="https://www.neopets.com/prehistoric/omelette.phtml" class="button" target="_blank"><img src="https://images.neopets.com/items/toy_y19haltot_giantom_action.gif"><br> Giant Omelette</a>
+            <a href="https://www.neopets.com/shop_of_offers.phtml?slorg_payout=yes" class="button" target="_blank"><img src="https://images.neopets.com/items/hall_petpet1.gif"><br> Shop of Offers</a>
+            <a href="https://www.neopets.com/pirates/anchormanagement.phtml" class="button" target="_blank"><img src="https://images.neopets.com/items/fur_pirate_anchor.gif"><br> Anchor Manag.</a>
+            <a href="https://www.neopets.com/pirates/forgottenshore.phtml" class="button" target="_blank"><img src="https://images.neopets.com/items/sta_forgotten_shore.gif"><br> Forgotten Shore</a>
+            <a href="https://www.neopets.com/water/fishing.phtml" class="button" target="_blank"><img src="https://images.neopets.com/items/gar_fishing_meepit.gif"><br> Fishing</a>
+            <a href="https://www.sunnyneo.com/dailies.php" class="button" target="_blank"><img src="https://images.neopets.com/items/book_bigpuzzles.gif"><br> Daily Puzzle</a>
+            <a href="https://www.neopets.com/desert/shrine.phtml" class="button" target="_blank"><img src="https://images.neopets.com/items/stamp_desert_shrine.gif"><br> Coltzan's Shrine</a>
+            <a href="https://www.neopets.com/faerieland/tdmbgpop.phtml" class="button" target="_blank"><img src="https://images.neopets.com/items/clo_y19haltot_bluegrundo_hh.gif"><br> Discarded MBG Plush</a>
+            <a href="https://www.neopets.com/island/tombola.phtml" class="button" target="_blank"><img src="https://images.neopets.com/items/toy_squeezy_tombola.gif"><br> Tombola</a>
+            <a href="https://www.neopets.com/desert/fruitmachine.phtml" class="button" target="_blank"><img src="https://images.neopets.com/items/sta_fruitmachine.gif"><br> Fruit Machine</a>
+            <a href="https://www.neopets.com/games/giveaway/giveaway_game.phtml" class="button" target="_blank"><img src="https://images.neopets.com/items/bat_desert_scarab.gif"><br> Qasalan Expellibox</a>
+            <a href="https://www.neopets.com/shenkuu/neggcave/" class="button" target="_blank"><img src="https://images.neopets.com/items/gif_negg_goldgem.gif"><br> Negg Puzzle</a>
+            <a href="https://www.neopets.com/games/voidworks/" class="button" target="_blank"><img src="https://images.neopets.com/items/91gja6gf4f.gif"><br> Voidworks</a>
+            <a href="https://www.neopets.com/games/cosycampfire/" class="button" target="_blank"><img src="https://images.neopets.com/items/gif_campfire.gif"><br> Cosy Campfire</a>
+            <a href="https://www.neopets.com/lab.phtml" class="button" target="_blank"><img src="https://images.neopets.com/items/plu_madscientist_labray.gif"><br> Secret Lab Ray</a>
+            <a href="https://www.neopets.com/petpetlab.phtml" class="button" target="_blank"><img src="https://images.neopets.com/items/plu_madscientist_kookith.gif"><br> Petpet Lab Ray</a>
+            <a href="https://www.neopets.com/dome/" class="button" target="_blank"><img src="https://images.neopets.com/items/bd_bfm_battle_hammer.gif"><br> Battldome</a>
         </div>
         <div class="block four dailies">
-            <a href="https://www.neopets.com/island/training.phtml?type=status" class="button"><img src="https://images.neopets.com/items/codestone11.gif"  target="_blank"><br> Island Training</a>
-            <a href="https://www.neopets.com/pirates/academy.phtml?type=status" class="button"><img src="https://images.neopets.com/items/plu_capn_threelegs.gif"  target="_blank"><br> Pirate Academy</a>
-            <a href="https://www.neopets.com/stockmarket.phtml?type=portfolio" class="button"><img src="https://images.neopets.com/games/game_stocks.gif"  target="_blank"><br> Stock Portfolio</a>
-            <a href="https://www.neopets.com/stockmarket.phtml?type=list&bargain=true" class="button"><img src="https://images.neopets.com/games/game_stocks.gif"  target="_blank"><br> Bargain Stocks</a>
+            <a href="https://www.neopets.com/island/training.phtml?type=status" class="button" target="_blank"><img src="https://images.neopets.com/items/codestone11.gif"><br> Island Training</a>
+            <a href="https://www.neopets.com/pirates/academy.phtml?type=status" class="button" target="_blank"><img src="https://images.neopets.com/items/plu_capn_threelegs.gif"><br> Pirate Academy</a>
+            <a href="https://www.neopets.com/stockmarket.phtml?type=portfolio" class="button" target="_blank"><img src="https://images.neopets.com/games/game_stocks.gif"><br> Stock Portfolio</a>
+            <a href="https://www.neopets.com/stockmarket.phtml?type=list&bargain=true" class="button" target="_blank"><img src="https://images.neopets.com/games/game_stocks.gif"><br> Bargain Stocks</a>
         </div>
         <footer>
             <p>A.P. Barnes &copy; 2025</p>
