--- a/pages/neodash.html
+++ b/pages/neodash.html
@@ -15,7 +15,7 @@
         
         <!-- MAIN NAVIGATION -->
         <div class="navblock">
-            <a href="/dashboard.html" alt="dashboard home"><i class="fa fa-home"></i></a>
+            <a href="/pages/dashboard.html" alt="dashboard home"><i class="fa fa-home"></i></a>
             <a href="https://drive.google.com/drive/u/0/my-drive" alt="google drive"><i class="fa fa-chrome"></i></a>
             <a href="https://www.notion.so/apmanda/Dashboard-9c059aa2cb39499d98eae17243288f06" alt="Notion"><i class="fa fa-box-archive"></i></a>
             <i class="fa fa-star"></i>
