--- a/pages/neodash.html
+++ b/pages/neodash.html
@@ -15,6 +15,7 @@
         
         <!-- MAIN NAVIGATION -->
         <div class="navblock">
+            <!--
             <a href="/pages/dashboard.html" alt="dashboard home"><i class="fa fa-home"></i></a>
             <a href="https://drive.google.com/drive/u/0/my-drive" alt="google drive"><i class="fa fa-chrome"></i></a>
             <a href="https://www.notion.so/apmanda/Dashboard-9c059aa2cb39499d98eae17243288f06" alt="Notion"><i class="fa fa-box-archive"></i></a>
@@ -22,7 +23,7 @@
             <a href="/artdash.html" alt="Drawing Dash"><i class="fa fa-palette"></i></a>
             <a href="/writingdash.html" alt="Writing Dash"><i class="fa fa-pencil"></i></a>
             <a href="/sewingdash.html" alt="Sewing Dash"><i class="fa fa-scissors"></i></a>
-            <a href="/codedash.html" alt="Coding Dash"><i class="fa fa-code"></i></a>
+            <a href="/codedash.html" alt="Coding Dash"><i class="fa fa-code"></i></a> -->
             
             <!-- MOBILE ESSENTIALS-->
             <div class="neonav">
