--- a/pages/neodash.html
+++ b/pages/neodash.html
@@ -27,7 +27,7 @@
             
             <!-- MOBILE ESSENTIALS-->
             <div class="neonav">
-                <a href="https://www.neopets.com/settings/profile/" target="_blank"><i class="fa fa-circle-user"></i></a>
+                <a href="https://www.neopets.com/settings/profile" target="_blank"><i class="fa fa-circle-user"></i></a>
                 <a href="https://www.neopets.com/home" target="_blank"><i class="fa fa-paw"></i></a>
                 <a href="https://www.neopets.com/bank.phtml" target="_blank"><i class="fa fa-bank"></i></a>
                 <a href="https://www.neopets.com/inventory.phtml" target="_blank"><i class="fa fa-clipboard"></i></a>
@@ -46,7 +46,7 @@
         
         <!-- ESSENTIALS (not visible on mobile) -->
         <div class="block three topblock">
-            <a href="https://www.neopets.com/settings/profile/" class="button" target="_blank"><i class="fa fa-circle-user"></i><br>Account</a>
+            <a href="https://www.neopets.com/settings/profile" class="button" target="_blank"><i class="fa fa-circle-user"></i><br>Account</a>
             <a href="https://www.neopets.com/home" class="button" target="_blank"><i class="fa fa-paw"></i><br>Pets</a>
             <a href="https://www.neopets.com/bank.phtml" class="button" target="_blank"><i class="fa fa-bank"></i><br>Bank</a>
             <a href="https://www.neopets.com/inventory.phtml" class="button" target="_blank"><i class="fa fa-clipboard"></i><br>Inv.</a>
