--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <p style="text-align: center;">There's nothing here, sorry :(</p>
+        <p style="text-align: center;">There's nothing here, sorry :(<br><br><img src="/images/neo.png"></p>
     </body>
 </html>
