--- a/pages/neodash.html
+++ b/pages/neodash.html
@@ -123,7 +123,8 @@
             <a href="https://www.neopets.com/tvw/rewards/" class="button" target="_blank"><img src="https://images.neopets.com/plots/tvw/rewards/images/trophies/296926ac2j.gif"><br> Rewards</a>
         </div>
         
-        <h2>Holiday Dailies</h2>
+        <!-- HOLIDAY EVENTS -->
+        <h2>Holiday Events</h2>
         <div class="block four dailies">
             <a href="https://www.neopets.com/freebies/" class="button" target="_blank"><img src="https://images.neopets.com/items/fur_y7_calendar.gif"><br> Monthly Freebies!</a>
             <a href="https://www.neopets.com/neopies/" class="button" target="_blank"><img src="https://images.neopets.com/faq/neopie_80x80.png"><br> Neopies (February)</a>
