--- a/pages/neodash.html
+++ b/pages/neodash.html
@@ -70,7 +70,8 @@
             <a href="https://ncmall.neopets.com/mall/shop.phtml?layout=new" class="button" target="_blank"><img src="https://images.neopets.com/items/mall_giftgold_welcome.gif"><br>NC Mall</a>
         </div>
         
-        <div class="block two dailies">
+        <div class="block three dailies">
+            <a href="https://www.neopets.com/customize/" class="button" target="_blank"><img src="https://images.neopets.com/themes/h5/winterholiday/images/customise-icon.png"><br> Customize</a>
             <a href="https://www.neopets.com/explore.phtml" class="button" target="_blank"><img src="https://images.neopets.com/items/school_37.gif"><br> Explore</a>
             <a href="https://www.neopets.com/pound/index.phtml" class="button" target="_blank"><img src="https://images.neopets.com/pound/adopt-hover.jpg" style="height: 80px; object-fit: cover;"><br>Pound</a>
         </div>
@@ -132,8 +133,8 @@
             <a href="https://www.neopets.com/altador/colosseum/" class="button" target="_blank"><img src="https://images.neopets.com/items/boo_altadorcup.gif"><br> Altador Cup (July/June)</a>
             <a href="https://www.neopets.com/festivaloffears/" class="button" target="_blank"><img src="https://images.neopets.com/festivaloffears/images/goodiebag-icon.png"><br> Festival of Fears (October)</a>
             <a href="https://www.neopets.com/faeriefestival/" class="button" target="_blank"><img src="https://images.neopets.com/faeriefestival/2023/np/prizeshop-icon.png"><br> Faerie Festival (August)</a>
-            <a href="https://www.neopets.com/np26birthday/" class="button" target="_blank"><img src="https://images.neopets.com/items/faellie_anniversary.gif"><br> Anniversary Celebrations! (November)</a>
-            <a href="https://www.neopets.com/winter/adventcalendar.phtml" class="button" target="_blank"><img src="https://images.neopets.com/items/fur_mistletoe_wreath.gif"><br> Advent Calendar</a>
+            <a href="https://www.neopets.com/np26birthday/" class="button" target="_blank"><img src="https://images.neopets.com/items/faellie_anniversary.gif"><br> B-Day Celebrations! (November)</a>
+            <a href="https://www.neopets.com/winter/adventcalendar.phtml" class="button" target="_blank"><img src="https://images.neopets.com/items/fur_mistletoe_wreath.gif"><br> Advent Calendar (December)</a>
         </div>
         
         <footer>
