--- a/pages/neodash.html
+++ b/pages/neodash.html
@@ -71,7 +71,7 @@
         </div>
         
         <div class="block three dailies">
-            <a href="https://www.neopets.com/customize/" class="button" target="_blank"><img src="https://images.neopets.com/themes/h5/winterholiday/images/customise-icon.png"><br> Customize</a>
+            <a href="https://www.neopets.com/customise/?view=Jifra" class="button" target="_blank"><img src="https://images.neopets.com/themes/h5/winterholiday/images/customise-icon.png"><br> Customize</a>
             <a href="https://www.neopets.com/explore.phtml" class="button" target="_blank"><img src="https://images.neopets.com/items/school_37.gif"><br> Explore</a>
             <a href="https://www.neopets.com/pound/index.phtml" class="button" target="_blank"><img src="https://images.neopets.com/pound/adopt-hover.jpg" style="height: 80px; object-fit: cover;"><br>Pound</a>
         </div>
